# ctk_interactive_canvas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
examples/: alignment_demo.py  basic_usage.py  bounding_box_editor.py  document_layout_designer.py  magic_methods_demo.py  seating_chart_planner.py
src/ctk_interactive_canvas/: __init__.py  draggable_rectangle.py  interactive_canvas.py
tests/: conftest.py  test_canvas.py  test_rectangle.py
